skysail.server/src/main/java/de/twenty11/skysail/server/utils/AntPath.g4
grammar AntPath;

antPathMatcher : SLASH chars WS? ;
chars          : ('a-z'|'A-Z'|US|SLASH|QUEST|STAR)+ ;        
US             : '_' ;
STAR           : '*' ;
SLASH          : '/' ;
QUEST          : '?' ;
WS             : [ \t\n\r]+ ;
